--- a/app/views/assignment2.html
+++ b/app/views/assignment2.html
@@ -4,7 +4,7 @@
 <br>
 <b>1. Automate the deployment of your web site using Grunt. 15 points.<br><br></b>
 
-<a href=""
+
 
 First I installed these plugins: (Terminal cmmd) <br><br>
 
@@ -62,6 +62,8 @@ dest: './'<br>
 
 
 <br><br>
+<a href="https://github.com/AlonsoLarra/alonsolarra/blob/master/Gruntfile.js"> My Gruntfile </a>
+<br><br>
 <b>2. Create a Hello World in NodeJs and create a tutorial about it. 15 points.<br><br></b>
 
 Installing Node.js and NPM is pretty straightforward using Homebrew. Homebrew is a package manager for Mac, it makes installing most open source sofware (like Node) very simple.<br>
@@ -118,6 +120,10 @@ After saving the file, on my Terminal, I positioned the directory on the folder 
 And that was it, it appears the messages saying <i>'Hello World' and 'Hola Mundo'</i>.
 
   <br><br>
+<a href="https://github.com/AlonsoLarra/alonsolarra/blob/master/hello.js"> My hello.js</a>
+<br><br>
+<a href="https://github.com/AlonsoLarra/alonsolarra/blob/master/ExportModule.js"> My ExportModule.js</a>
+<br><br>
   <b>3. Install the aws sdk for nodejs and create a tutorial about it. 15 points.<br><br></b>
 
 Basically what I did is that I opened my terminal and I tried to install the sdk by executing: <br><br>
@@ -134,8 +140,6 @@ It failed the installation so I kept looking and then I found another command:<b
 
 <br>
 And it Worked!.
-
-
 
 <br><br>
   <b>4. Create a code in NodeJs that will tell you the version/date of your website in S3. 15points.<br><br></b>
@@ -161,6 +165,8 @@ And it Worked!.
 
 
 
+<br><br>
+<a href="https://github.com/AlonsoLarra/alonsolarra/blob/master/Buckets.js"> Buckets.js</a>
 <br><br>
   <b>5.Read and explain the post about Microservices Trade-Offs by Martin Fowler
     (http://martinfowler.com/articles/microservice-trade-offs.html). 15 points.</b><br><br>
