--- a/app/views/assignment3.html
+++ b/app/views/assignment3.html
@@ -63,7 +63,7 @@
 
 
 <br><br>
-<a href="https://github.com/AlonsoLarra/alonsolarra/blob/master/Gruntfile.js"> My Script </a>
+<a href="https://github.com/AlonsoLarra/alonsolarra/blob/master/readImage.js"> Script </a>
 <br><br>
 
 <b>2. Create a NodeJS script that will do the following: Will get the Nasa Astronomic Picture of the day. Save the image in the local file system.
@@ -92,7 +92,7 @@
 
 <br><br>
 
-<a href="https://github.com/AlonsoLarra/alonsolarra/blob/master/APOD.js"> My Script </a>
+<a href="https://github.com/AlonsoLarra/alonsolarra/blob/master/APOD.js"> Script </a>
 <br><br>
 <b>3. Implement Google Analytics in your personal web site. 20 points.<br><br></b>
 <a href="https://s3.amazonaws.com/alonsolarra/images/Screen+Shot+2016-09-01+at+9.36.38+PM.png" target="_top">Google Analytics Console</a>
@@ -100,6 +100,11 @@
 <br><br>
 <b>4. Read and explain the following article by Martin Fowler: http://martinfowler.com/ articles/richardsonMaturityModel.html. 20 points<br><br></b>
 
+The RMM (Richrdson Maturity Model) is a model that breaks down the principal elements of a REST approach into three steps:
+<b>Resources usage</b>; using divide and conquer, breaking a large service endpoint down into multiple resources, <b>Http verbs</b>; a standard set of verbs (get,post,put,delete) so that we handle similar situations in the same way by removing unnecessary
+variation, and <b>Hypermedia controls</b>; providing a way of making a protocol more self-documenting. <br>Martin Fowler says that we do not
+have enough examples yet to be really sure that the restful approach is the right way to integrate systems but, talking about RMM,
+he says that it's a very attractive approach and the one that he would recommend in most situations.
 
 <br><br>
 <b>5. Explain why cloud computing is important. 10 points.<br><br></b>
