--- a/app/views/caracteristicasgeograficas.html
+++ b/app/views/caracteristicasgeograficas.html
@@ -2,10 +2,6 @@
 
 <div align="center">
 
-  <video width="800" height="600" controls>
-    <source src="../videos/CaracteristicasGeograficas.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-
+  <iframe width="800" height="500" src="https://www.youtube.com/embed/f3pfOqC9nDw" frameborder="1" allowfullscreen></iframe>
 
 </div>
