--- a/app/views/casoscontaminacion.html
+++ b/app/views/casoscontaminacion.html
@@ -1,1 +1,146 @@
-<p>This is the casosContaminacion view.</p>
+<head>
+  <title>Proyecto Final</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="css\bootstrap.min.css" rel="stylesheet">
+  <link href="css\agency.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="sha384-2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="js\agency.min.js"></script>
+</head>
+<body>
+<div class="jumbotron">
+  <h2 style="text-align:center;">
+    Casos de contaminacion del aire, agua, tierra, visual, auditiva.
+  </h2>
+</div>
+<!--Contaminacion del agua-->
+<section class="container-fluid">
+  <div class="container">
+    <div class="row" style="padding-bottom:50px;">
+      <h2 class="section-heading" style="text-align:center;">
+        Contaminacion del agua
+      </h2>
+      <div class="container-fluid">
+        <div class="intro-heading" style="text-align:center;">
+          En casi todos los centros urbanos, los desagües se vierten directamente a los rios, lagos y al mar.
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card card-block">
+        <h3 class="card-title" style="text-align:center">Cierran 3 playas por contaminación entre Tijuana y Rosarito</h3>
+        <p class="card-text" style="text-align:center">Debido al alto número de contaminantes que registran, 3 playas entre los municipios de Tijuana y Rosarito fueron cerradas: Playa Blanca, San Antonio del Mar y Baja Malibu</p>
+        <a href="http://stmedia.net/noticias/salud/cierran-3-playas-por-contaminacion-entre-tijuana-y-rosarito#.WDzXzfl97IU"><p class="card-text" style="text-align:right">Leer más...</p></a>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card card-block">
+        <h3 class="card-title" style="text-align:center">Estudio de Cofepris revela que las Playas de Tijuana son las más contaminadas a nivel nacional</h3>
+        <p class="card-text" style="text-align:center">Las playas de Tijuana son las más contaminadas de todo el país y no deberían de considerarse aptas para uso humano revela estudio realizado por Cofepris, Salvavidas de Tijuana descartan que esten contaminadas.</p>
+        <a href="http://stmedia.net/noticias/regional/estudio-de-cofepris-revela-que-las-playas-de-tijuana-son-las-mas-contaminadas-a#.WDzY3fl97IU"><p class="card-text" style="text-align:right">Leer más...</p></a>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card card-block">
+        <h3 class="card-title" style="text-align:center">Aumentan las descargas de aguas negras entre Tijuana y Playas de Rosarito</h3>
+        <p class="card-text" style="text-align:center">Siguen aumentando las descargas de aguas negras entre Tijuana y Playas de Rosarito, un tema que poco importa a las autoridades en nuestra región.</p>
+        <a href="http://stmedia.net/noticias/salud/aumentan-las-descargas-de-aguas-negras-entre-tijuana-y-playas-de-rosarito#.WDzdwfl97IV"><p class="card-text" style="text-align:right">Leer más...</p></a>
+      </div>
+    </div>
+
+  </div>
+</section>
+<!--Contaminacion del aire-->
+<section class="container-fluid">
+  <div class="container">
+    <div class="row" style="padding-bottom:50px;">
+      <h2 class="section-heading" style="text-align:center;">
+        Contaminacion del aire
+      </h2>
+      <div class="container-fluid">
+        <div class="intro-heading" style="text-align:center;">
+          Las emisiones de los automoviles, los compuestos quimicos de las fabricas, polvo, polen, etc., son particulas suspendidas en el aire las cuales en exceso pueden causar la contaminacion del aire.
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card card-block">
+        <h3 class="card-title" style="text-align:center">De moderada a dañina la contaminación del aire en Tijuana tras incendios</h3>
+        <p class="card-text" style="text-align:center">La calidad del aire en Tijuana se vio afectada por el incremento de incendios en la región, así lo indicaron las estaciones de monitoreo distribuidas en la ciudad.</p>
+        <a href="http://stmedia.net/noticias/regional/de-moderada-a-danina-la-contaminacion-del-aire-en-tijuana-tras-incendios#.WDzcL_l97IU"><p class="card-text" style="text-align:right">Leer más...</p></a>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card card-block">
+        <h3 class="card-title" style="text-align:center">Producen al año Tijuana y Rosarito 100 mil toneladas de partículas contaminantes al aire</h3>
+        <p class="card-text" style="text-align:center">A causa de la gran cantidad de vehiculos que existen en la ciudad, asi como la acumulacion de basura, entre otros factores, cada año se producen mas de 100 mil toneladas de particulas contaminantes hacia el aire en la region de Tijuana y Rosarito.</p>
+        <a href="http://www.uniradioinforma.com/noticias/tijuana/67517/producen-al-ano-tijuana-y-rosarito-100-mil-toneladas-de-particulas-contaminantes-al-aire.html">Leer más...</p></a>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card card-block">
+        <h3 class="card-title" style="text-align:center">El 80% de la contaminación de Tijuana, por el transporte</h3>
+        <p class="card-text" style="text-align:center">Las unidades viejas y obsoletas del transporte Público de Tijuana provocan hasta un 80% de la contaminación que se registra en la ciudad, aseguró el presidente del Consejo Consultivo para el Desarrollo Sustentable Región Noroeste, José Carmelo Zavala.</p>
+        <a href="http://www.oem.com.mx/elsoldetijuana/notas/n4135310.htm">Leer más...</p></a>
+      </div>
+    </div>
+  </div>
+</section>
+<!--Contaminacion visual-->
+<section class="container-fluid">
+  <div class="container">
+    <div class="row" style="padding-bottom:50px;">
+      <h2 class="section-heading" style="text-align:center;">
+        Contaminacion visual
+      </h2>
+      <div class="container-fluid">
+        <div class="intro-heading" style="text-align:center;">
+          La contaminacion visual es todo aquello que afecta o perturba la visualizacion de alguna zona o simplemente viola la estetica del paisaje.
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card card-block">
+        <h3 class="card-title" style="text-align:center">Cableado excesivo en Tijuana se ha convertido en contaminación visual</h3>
+        <p class="card-text" style="text-align:center">El cableado excesivo en Tijuana se ha convertido en un tipo de contaminación visual, lo que demuestra que ninguna autoridad lo está supervisando.</p>
+        <a href="http://stmedia.net/noticias/regional/cableado-excesivo-en-tijuana-se-ha-convertido-en-contaminacion-visual#.WDzZXvl97IU"><p class="card-text" style="text-align:right">Leer más...</p></a>
+      </div>
+    </div>
+  </div>
+</section>
+<!--Contaminacion auditiva-->
+<section class="container-fluid">
+  <div class="container">
+    <div class="row" style="padding-bottom:50px;">
+      <h2 class="section-heading" style="text-align:center;">
+        Contaminacion auditiva
+      </h2>
+      <div class="container-fluid">
+        <div class="intro-heading" style="text-align:center;">
+          La contaminacion auditiva es un problema que afecta al medio ambiente urbano y es uno que esta aumentando con el paso del tiempo debido a que no se le ha dado la atencion adecuada para solucionar los problemas.
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card card-block">
+        <h3 class="card-title" style="text-align:center">Ruido causa estrés y afecta la salud</h3>
+        <p class="card-text" style="text-align:center">Los sonidos indeseados constituyen el estorbo público más generalizado en la sociedad actual... El ruido es un peligro real y efectivo para la salud puede ocasionarnos serias tensiones físicas y emocionales.</p>
+        <a href="http://stmedia.net/noticias/regional/ruido-causa-estres-y-afecta-la-salud#.WDzck_l97IU">Leer más...</p></a>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card card-block">
+        <h3 class="card-title" style="text-align:center">Ruido genera descontento y enoja a ciudadanos</h3>
+        <p class="card-text" style="text-align:center">Vivir en una vialidad principal o boulevard tiene sus ventajas pero también se puede convertir en un dolor de cabeza.</p>
+        <p class="card-text" style="text-align:center">Cuando piensa en contaminación lo primero que se viene a la mente es basura y tiraderos de desperdicios en sitios no adecuados; pero pocos se imaginan que el ruido también contamina.
+          Es el boulevard Casa Blanca donde desde hace varios años los residentes de la zona sufren el excesivo ruido provocado por trailers, vehículos sin escape y motos.</p>
+        <a href="http://stmedia.net/noticias/regional/ruido-genera-descontento-y-enoja-a-ciudadanos#.WDzclvl97IU">Leer más...</p></a>
+      </div>
+    </div>
+  </div>
+</section>
+</body>
