--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,2 +1,5 @@
+<h1 ALIGN="center">SER HUMANO Y MEDIO AMBIENTE</h1>
 
-Main view
+<h3>Consejos para cuidar el medio ambiente</h3>
+
+<iframe width="800" height="500" src="https://www.youtube.com/embed/cj-bD7717Ro" frameborder="5" allowfullscreen></iframe>
